# CFSApp

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/CFSUI/: CMakeLists.txt  CubicSpline.cpp  PathEditor.cpp  PathSampling.cpp  PathSampling.h  Visualization.cpp  canvas.cpp  canvas.h  main.cpp  main.h  my_imconfig.h  path2points.cpp  path2points.h  svg.cpp  svg.h
src/CFSUI/include/: MyImGuiPlugin.h  PathEditor.h  PathSampling.h  Visualization.h  imgui_fonts_text_icon.h  main.h  my_imconfig.h
src/CFSUI/src/: PathEditor.cpp  PathSampling.cpp  Visualization.cpp  main.cpp
src/SmartSFC/: .gitattributes  Base.cpp  CFSCNC.cpp  CFSCNC.h  CMakeLists.txt  Circuit.h  Constant.h  IO.cpp  IntegralCurvature.cpp  MathHelper.h  NewtonApple_hull3D.cpp  NewtonApple_hull3D.h  Output.cpp  README.md  Source.cpp  Strip.h  ToolPathTimeEstimator.cpp  ToolPathTimeEstimator.hpp  Tree.h  Vector2D.cpp  Vector2D.hpp  cgalpackage.cpp  cgalpackage.h  clipper.cpp  clipper.hpp  dllmain.cpp  kdtree.cpp  kdtree.h  math.hpp  scallop_path.cpp  stdafx.cpp  stdafx.h
src/SmartSFC/G/: 0.path  shape.txt
src/SmartSFC/G/path/: 0.path
src/SmartSFC/ipch/smartsfc-79e6cced/: smartsfc-5987c027.ipch
